fixd overflow

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -257,9 +257,9 @@
 					word-wrap: break-word;
 					.props {
 						padding-left: 30px;
-						width: 100%;
+
 						color: #f8c555;
-						word-wrap: break-word;
+
 						.token {
 							color: #999;
 						}
@@ -275,15 +275,17 @@
 					.pre {
 						color: #cc99cd;
 						width: 750px;
-						word-break: break-all;
-						word-wrap: break-word;
+
 						animation: smoth 2s ease-in;
 
-						.props {
+						.row {
 							padding-left: 30px;
 							width: 100%;
-							color: #f8c555;
-							word-wrap: break-word;
+							display: flex;
+							justify-content: flex-start;
+							.props {
+								color: #f8c555;
+							}
 							.token {
 								color: #999;
 							}
@@ -474,6 +476,9 @@
 						margin-bottom: 56px;
 						padding: 5px;
 						font-size: 10px;
+						.props {
+							padding-left: 10px;
+						}
 						.pre {
 							width: 90vw;
 							max-width: 320px;
@@ -481,8 +486,14 @@
 							margin-bottom: 56px;
 							padding: 0;
 							font-size: 10px;
-							.props {
+							.row {
 								padding-left: 5px;
+								.props {
+									padding-left: 5px;
+								}
+								.value {
+									word-wrap: break-word;
+								}
 							}
 						}
 					}
